--- a/menu.html
+++ b/menu.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="/style/css/menu.css" />
   </head>
   <body>
-    <nav></nav>
+    <nav>
+      <div class="inline">
+        <span class="logo">KHCAFE</span>
+        <span
+          ><ul class="inline list-style-none nav-pos">
+            <li><a href="" target="_self">Home</a></li>
+            <li>로그인</li>
+            <li>설문조사</li>
+            <li>통계</li>
+          </ul></span
+        >
+      </div>
+    </nav>
   </body>
 </html>
