--- a/Login.html
+++ b/Login.html
@@ -18,7 +18,7 @@
 
         <tr>
           <th>Password</th>
-          <td><input type="text" name="user_pw" id="user_pw" /></td>
+          <td><input type="password" name="user_pw" id="user_pw" /></td>
           <td><button type="submit">Login</button></td>
         </tr>
 
