--- a/End.html
+++ b/End.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>End</title>
+    <link rel="stylesheet" href="../term_publishing/nav.css" />
+    <link rel="stylesheet" href="../term_publishing/section.css" />
   </head>
   <body>
     <header>KH 설문조사 종료</header>
