--- a/static_answer.html
+++ b/static_answer.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../term_publishing/nav.css" />
-    <link rel="stylesheet" href="../term_publishing/section.css" />
+    <link rel="stylesheet" href="/style/css/nav.css" />
+    <link rel="stylesheet" href="/style/css/section.css" />
   </head>
   <body>
     <section>
