--- a/Login.html
+++ b/Login.html
@@ -9,9 +9,38 @@
     <link rel="stylesheet" href="/style/css/section.css" />
   </head>
   <body>
-    <header>KH CAFE</header>
-
+    
     <nav>
+      <div class="inline">
+        <span class="logo"
+          ><a href="./index.html" target="_self" class="logo-button">KHCAFE</a></span
+        >
+        <span
+          ><ul class="inline list-style-none nav-pos">
+            <li>
+              <a href="./index.html" target="_self" class="nav-button">Home</a>
+            </li>
+            <li>
+              <a href="./Login.html" target="_self" class="nav-button"
+                >로그인</a
+              >
+            </li>
+            <li>
+              <a href="./survey.html" target="_self" class="nav-button"
+                >설문조사</a
+              >
+            </li>
+            <li>
+              <a href="./static_answer.html" target="_self" class="nav-button"
+                >통계</a
+              >
+            </li>
+          </ul></span
+        >
+      </div>
+    </nav>
+    <header>KH CAFE</header>
+    <section>
       <table>
         <tr>
           <th>ID</th>
@@ -24,10 +53,10 @@
           <td><button type="submit">Login</button></td>
         </tr>
 
-          <td><a href="">회원가입</a></td>
+          <td><a href="./Signup.html">회원가입</a></td>
         </tr>
       </table>
-    </nav>
+    </section>
 
     <footer>KH Cafe Address: 서울시 강남구 Call:</footer>
   </body>
