--- a/Signup.html
+++ b/Signup.html
@@ -9,6 +9,35 @@
     <link rel="stylesheet" href="/style/css/section.css" />
   </head>
   <body>
+    <nav>
+      <div class="inline">
+        <span class="logo"
+          ><a href="./index.html" target="_self" class="logo-button">KHCAFE</a></span
+        >
+        <span
+          ><ul class="inline list-style-none nav-pos">
+            <li>
+              <a href="./index.html" target="_self" class="nav-button">Home</a>
+            </li>
+            <li>
+              <a href="./Login.html" target="_self" class="nav-button"
+                >로그인</a
+              >
+            </li>
+            <li>
+              <a href="./survey.html" target="_self" class="nav-button"
+                >설문조사</a
+              >
+            </li>
+            <li>
+              <a href="./static_answer.html" target="_self" class="nav-button"
+                >통계</a
+              >
+            </li>
+          </ul></span
+        >
+      </div>
+    </nav>
     <header>회원가입</header>
 
     <section>
