--- a/index.html
+++ b/index.html
@@ -8,5 +8,38 @@
     <link rel="stylesheet" href="/style/css/nav.css" />
     <link rel="stylesheet" href="/style/css/section.css" />
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <div class="inline">
+        <span class="logo"
+          ><a href="./index.html" target="_self" class="logo-button"
+            >KHCAFE</a
+          ></span
+        >
+        <span
+          ><ul class="inline list-style-none nav-pos">
+            <li>
+              <a href="./index.html" target="_self" class="nav-button">Home</a>
+            </li>
+            <li>
+              <a href="./Login.html" target="_self" class="nav-button"
+                >로그인</a
+              >
+            </li>
+            <li>
+              <a href="./survey.html" target="_self" class="nav-button"
+                >설문조사</a
+              >
+            </li>
+            <li>
+              <a href="./static_answer.html" target="_self" class="nav-button"
+                >통계</a
+              >
+            </li>
+          </ul></span
+        >
+      </div>
+    </nav>
+    <section>메인 페이지 내용 방문을 감사합니다...?</section>
+  </body>
 </html>
