--- a/menu.html
+++ b/menu.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/style/css/menu.css" />
-    <link rel="stylesheet" href="/style/css/login.css" />
+    <link rel="stylesheet" href="/style/css/nav.css" />
+    <link rel="stylesheet" href="/style/css/section.css" />
   </head>
   <body>
     <nav>
       <div class="inline">
         <span class="logo"
-          ><a href="" target="_self" class="logo-button">KHCAFE</a></span
+          ><a href="./index.html" target="_self" class="logo-button">KHCAFE</a></span
         >
         <span
           ><ul class="inline list-style-none nav-pos">
