--- a/static_answer.html
+++ b/static_answer.html
@@ -103,7 +103,9 @@
           </tr>
         </table>
       </div>
-      <div><input type="button" value="다음" /></div>
+      <div>
+        <a href="./static_user.html"><input type="button" value="다음" /></a>
+      </div>
     </section>
   </body>
 </html>
