--- a/End.html
+++ b/End.html
@@ -40,19 +40,14 @@
         >
       </div>
     </nav>
-    <header>KH 설문조사 종료</header>
 
-    <article>
+    <section>
       소중한 시간을 내어 설문에 참여해 주셔서 감사합니다.
       <br />
       앞으로도 고객님께서 더욱 만족하실 수 있도록 노력하는 KH Cafe가 되겠습니다.
       <br />
       감사합니다.
-    </article>
-
-    <footer>
       <a href="">Home</a>
-      <a href="">Logout</a>
-    </footer>
+    </section>
   </body>
 </html>
