--- a/static_answer.html
+++ b/static_answer.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="/style/css/nav.css" />
     <link rel="stylesheet" href="/style/css/section.css" />
+    <link rel="stylesheet" href="/style/css/statics.css" />
   </head>
   <body>
     <nav>
