--- a/survey.html
+++ b/survey.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="/style/css/nav.css" />
     <link rel="stylesheet" href="/style/css/section.css" />
-    <link rel="stylesheet" href="./style/css/survey.css" />
+    <link rel="stylesheet" href="/style/css/survey.css" />
   </head>
   <body>
     <nav>
@@ -50,7 +50,7 @@
               <th colspan="5">문항</th>
             </tr>
             <tr>
-              <td rowspan="2">1</td>
+              <td class="bold" rowspan="2">1</td>
               <td colspan="5">해당 매장을 방문시 매장은 청결 하였습니까?</td>
             </tr>
             <tr>
@@ -61,7 +61,7 @@
               <td><input type="radio" name="Q1" id="" /> 매우 그렇다.</td>
             </tr>
             <tr>
-              <td rowspan="2">2</td>
+              <td class="bold" rowspan="2">2</td>
               <td colspan="5">주문시 직원은 고객님께 친절 하였습니까?</td>
             </tr>
             <tr>
@@ -72,7 +72,7 @@
               <td><input type="radio" name="Q2" id="" /> 매우 그렇다.</td>
             </tr>
             <tr>
-              <td rowspan="2">3</td>
+              <td class="bold" rowspan="2">3</td>
               <td colspan="5">
                 주문하신 음료가 나오기까지 시간이 적당하였습니까?
               </td>
@@ -85,7 +85,7 @@
               <td><input type="radio" name="Q3" id="" /> 매우 그렇다.</td>
             </tr>
             <tr>
-              <td rowspan="2">4</td>
+              <td class="bold" rowspan="2">4</td>
               <td colspan="5">직원이 제조한 음료에 대해 맛은 좋았습니까?</td>
             </tr>
             <tr>
@@ -96,7 +96,7 @@
               <td><input type="radio" name="Q4" id="" /> 매우 그렇다.</td>
             </tr>
             <tr>
-              <td rowspan="2">5</td>
+              <td class="bold" rowspan="2">5</td>
               <td colspan="5">
                 해당 매장을 다음에도 재방문 하실 의향이 있으십니까?
               </td>
