--- a/static_user.html
+++ b/static_user.html
@@ -81,7 +81,7 @@
           </tr>
         </table>
       </div>
-      <div><input type="button" value="확인" /></div>
+      <div class="center margin-top"><input type="button" value="확인" /></div>
     </section>
   </body>
 </html>
