--- a/static_answer.html
+++ b/static_answer.html
@@ -104,7 +104,7 @@
           </tr>
         </table>
       </div>
-      <div>
+      <div class="center margin-top">
         <a href="./static_user.html"><input type="button" value="다음" /></a>
       </div>
     </section>
