--- a/Login.html
+++ b/Login.html
@@ -7,6 +7,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="/style/css/nav.css" />
     <link rel="stylesheet" href="/style/css/section.css" />
+    <link rel="stylesheet" href="/style/css/Login.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
   </head>
   <body>
     
@@ -39,9 +44,11 @@
         >
       </div>
     </nav>
-    <header>KH CAFE</header>
+
+    <header class="header">KH CAFE</header>
+
     <section>
-      <table>
+      <table class="table" >
         <tr>
           <th>ID</th>
           <td><input type="text" name="user_id" id="user_id" /></td>
@@ -53,11 +60,11 @@
           <td><button type="submit">Login</button></td>
         </tr>
 
-          <td><a href="./Signup.html">회원가입</a></td>
+          <td colspan="3" class="td"><a href="./Signup.html">회원가입</a></td>
         </tr>
       </table>
     </section>
 
-    <footer>KH Cafe Address: 서울시 강남구 Call:</footer>
+    <footer class="footer">KH Cafe | Address: 서울시 강남구 테헤란로 130호 1F | Call☎: (02)123-4567 </footer> 
   </body>
 </html>
