--- a/Login.html
+++ b/Login.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" href="/style/css/nav.css" />
     <link rel="stylesheet" href="/style/css/section.css" />
     <link rel="stylesheet" href="/style/css/Login.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
+   
   </head>
   <body>
     
     <nav>
       <div class="inline">
         <span class="logo"
-          ><a href="./index.html" target="_self" class="logo-button">KHCAFE</a></span
+          ><a href="./index.html" target="_self" class="logo-button"
+            >KHCAFE</a
+          ></span
         >
+        
         <span
           ><ul class="inline list-style-none nav-pos">
             <li>
@@ -57,7 +57,7 @@
         <tr>
           <th>Password</th>
           <td><input type="password" name="user_pw" id="user_pw" /></td>
-          <td><button type="submit">Login</button></td>
+          <td><button type="submit"> <a href="/survey.html"> Login</a></button></td>
         </tr>
 
           <td colspan="3" class="td"><a href="./Signup.html">회원가입</a></td>
