--- a/index.html
+++ b/index.html
@@ -40,6 +40,20 @@
         >
       </div>
     </nav>
-    <section>메인 페이지 내용 방문을 감사합니다...?</section>
+    <section>
+      <img
+        src="https://cdn.pixabay.com/photo/2018/10/19/16/46/coffee-3759005__340.jpg"
+        width="400px"
+        height="500px"
+        alt=""
+      />
+
+      <img
+        src="https://cdn.pixabay.com/photo/2018/10/19/16/46/coffee-3759005__340.jpg"
+        width="400px"
+        height="500px"
+        alt=""
+      />
+    </section>
   </body>
 </html>
