--- a/End.html
+++ b/End.html
@@ -42,12 +42,16 @@
     </nav>
 
     <section>
-      소중한 시간을 내어 설문에 참여해 주셔서 감사합니다.
-      <br />
-      앞으로도 고객님께서 더욱 만족하실 수 있도록 노력하는 KH Cafe가 되겠습니다.
-      <br />
-      감사합니다.
-      <a href="">Home</a>
+      <div class="div">
+        소중한 시간을 내어 설문에 참여해 주셔서 감사합니다.
+        <br />
+        앞으로도 고객님께서 더욱 만족하실 수 있도록 노력하는 KH Cafe가
+        되겠습니다.
+        <br />
+        감사합니다.
+        <br />
+        <a href="/index.html">🏠Home</a>
+      </div>
     </section>
   </body>
 </html>
