--- a/Signup.html
+++ b/Signup.html
@@ -7,12 +7,15 @@
     <title>Signup</title>
     <link rel="stylesheet" href="/style/css/nav.css" />
     <link rel="stylesheet" href="/style/css/section.css" />
+    <link rel="stylesheet" href="/style/css/Signup.css" />
   </head>
   <body>
     <nav>
       <div class="inline">
         <span class="logo"
-          ><a href="./index.html" target="_self" class="logo-button">KHCAFE</a></span
+          ><a href="./index.html" target="_self" class="logo-button"
+            >KHCAFE</a
+          ></span
         >
         <span
           ><ul class="inline list-style-none nav-pos">
@@ -38,10 +41,10 @@
         >
       </div>
     </nav>
-    <header>회원가입</header>
+    <header class="header">회원가입</header>
 
     <section>
-      <table>
+      <table class="table">
         <tr>
           <th>아이디</th>
           <td><input type="text" name="user_id" id="user_id" /></td>
@@ -96,20 +99,15 @@
             ></textarea>
           </td>
         </tr>
+      </table>
     </section>
 
-    <footer>
-        <tr>
-          <td colspan="2">
-            <input type="checkbox" name="agree" value="agree" id="agree" />
-            <label for="agree">정보제공에 동의합니다.</label>
-          </td>
-        </tr>
+    <footer class="footer">
+      <input type="checkbox" name="agree" value="agree" id="agree" />
+      <label for="agree">정보제공에 동의합니다.</label>
 
-        <tr>
-          <th><button type="submit">확인</button></th>
-        </tr>
-      </table>
+      <br />
+      <button type="submit"><a href="/Login.html"> 확인</a></button>
     </footer>
   </body>
 </html>
