--- a/static_user.html
+++ b/static_user.html
@@ -81,7 +81,9 @@
           </tr>
         </table>
       </div>
-      <div class="center margin-top"><input type="button" value="확인" /></div>
+      <div class="center margin-top">
+        <a href="./End.html"><input type="button" value="확인" /></a>
+      </div>
     </section>
   </body>
 </html>
