--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="/style/css/nav.css" />
     <link rel="stylesheet" href="/style/css/section.css" />
+    <link rel="stylesheet" href="/style/css/index.css">
   </head>
   <body>
     <nav>
@@ -41,19 +42,16 @@
       </div>
     </nav>
     <section>
-      <img
-        src="https://cdn.pixabay.com/photo/2018/10/19/16/46/coffee-3759005__340.jpg"
-        width="400px"
-        height="500px"
-        alt=""
-      />
+      <div class="font">KH CAFE</div>
 
-      <img
-        src="https://cdn.pixabay.com/photo/2018/10/19/16/46/coffee-3759005__340.jpg"
-        width="400px"
-        height="500px"
-        alt=""
-      />
+      <table class="table">
+        <td><img src="https://cdn.pixabay.com/photo/2022/11/01/05/18/coffee-7561286__340.jpg" alt=""></td>
+        <td> <img src="https://cdn.pixabay.com/photo/2018/10/19/16/46/coffee-3759012__340.jpg" alt=""></td>
+        <td><img src="https://cdn.pixabay.com/photo/2015/06/01/23/43/chocolate-794461__340.jpg" alt=""></td>
+      </div>
+  </table>
     </section>
+
+    <footer class="footer">KH Cafe | Address: 서울시 강남구 테헤란로 130호 1F | Call☎: (02)123-4567 </footer>
   </body>
 </html>
