--- a/Login.html
+++ b/Login.html
@@ -46,9 +46,10 @@
       </div>
     </nav>
 
-    <header class="header">KH CAFE</header>
+    
 
     <section>
+      <div>로그인</div>
       <table class="table" >
         <tr>
           <th>ID</th>
