--- a/index.html
+++ b/index.html
@@ -42,13 +42,12 @@
       </div>
     </nav>
     <section>
-      <div class="font">KH CAFE</div>
-
-      <table class="table">
+<div><img src="./style/image/coffee.png" class="cut-img"></div>
+      <!-- <table class="table">
         <td><img src="https://cdn.pixabay.com/photo/2022/11/01/05/18/coffee-7561286__340.jpg" alt=""></td>
         <td> <img src="https://cdn.pixabay.com/photo/2018/10/19/16/46/coffee-3759012__340.jpg" alt=""></td>
         <td><img src="https://cdn.pixabay.com/photo/2015/06/01/23/43/chocolate-794461__340.jpg" alt=""></td>
-      </div>
+      </div> -->
   </table>
     </section>
 
