--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="/style/css/nav.css" />
     <link rel="stylesheet" href="/style/css/section.css" />
     <link rel="stylesheet" href="/style/css/index.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@700&display=swap" rel="stylesheet">
   </head>
   <body>
     <nav>
@@ -43,11 +47,9 @@
     </nav>
     <section>
 <div><img src="./style/image/coffee.png" class="cut-img"></div>
-      <!-- <table class="table">
-        <td><img src="https://cdn.pixabay.com/photo/2022/11/01/05/18/coffee-7561286__340.jpg" alt=""></td>
-        <td> <img src="https://cdn.pixabay.com/photo/2018/10/19/16/46/coffee-3759012__340.jpg" alt=""></td>
-        <td><img src="https://cdn.pixabay.com/photo/2015/06/01/23/43/chocolate-794461__340.jpg" alt=""></td>
-      </div> -->
+      <div class="maintext">KH카페에 방문해 주셔서 진심으로 감사합니다.</div>
+      <div class="maintext">다시 한번 방문에 감사드립니다.</div>
+      <div class="maintext">진짜 감사합니다.</div>
   </table>
     </section>
 
