--- a/End.html
+++ b/End.html
@@ -7,6 +7,7 @@
     <title>End</title>
     <link rel="stylesheet" href="/style/css/nav.css" />
     <link rel="stylesheet" href="/style/css/section.css" />
+    <link rel="stylesheet" href="/style/css/footer.css" />
   </head>
   <body>
     <nav>
@@ -53,5 +54,9 @@
         <a href="/index.html">🏠Home</a>
       </div>
     </section>
+
+    <footer class="footer">
+      KH Cafe | Address: 서울시 강남구 테헤란로 130호 1F | Call☎: (02)123-4567
+    </footer>
   </body>
 </html>
