--- a/Login.html
+++ b/Login.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/style/css/nav.css" />
     <link rel="stylesheet" href="/style/css/section.css" />
     <link rel="stylesheet" href="/style/css/Login.css">
+    <link rel="stylesheet" href="/style/css/footer.css">
    
    
   </head>
