--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/style/css/nav.css" />
     <link rel="stylesheet" href="/style/css/section.css" />
     <link rel="stylesheet" href="/style/css/index.css">
+    <link rel="stylesheet" href="/style/css/footer.css">
   </head>
   <body>
     <nav>
