--- a/static_answer.html
+++ b/static_answer.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/style/css/nav.css" />
     <link rel="stylesheet" href="/style/css/section.css" />
     <link rel="stylesheet" href="/style/css/statics.css" />
+    <link rel="stylesheet" href="/style/css/footer.css" />
   </head>
   <body>
     <nav>
@@ -108,5 +109,9 @@
         <a href="./static_user.html"><input type="button" value="다음" /></a>
       </div>
     </section>
+
+    <footer class="footer">
+      KH Cafe | Address: 서울시 강남구 테헤란로 130호 1F | Call☎: (02)123-4567
+    </footer>
   </body>
 </html>
