--- a/survey.html
+++ b/survey.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/style/css/nav.css" />
     <link rel="stylesheet" href="/style/css/section.css" />
     <link rel="stylesheet" href="/style/css/survey.css" />
+    <link rel="stylesheet" href="/style/css/footer.css" />
   </head>
   <body>
     <nav>
@@ -115,5 +116,9 @@
         </form>
       </div>
     </section>
+
+    <footer class="footer">
+      KH Cafe | Address: 서울시 강남구 테헤란로 130호 1F | Call☎: (02)123-4567
+    </footer>
   </body>
 </html>
