--- a/Signup.html
+++ b/Signup.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Signup</title>
-    <link rel="stylesheet" href="/style/css/nav.css" />
-    <link rel="stylesheet" href="/style/css/section.css" />
-    <link rel="stylesheet" href="/style/css/Signup.css" />
+    <link rel="stylesheet" href="./style/css/nav.css" />
+    <link rel="stylesheet" href="./style/css/section.css" />
+    <link rel="stylesheet" href="./style/css/Signup.css" />
   </head>
   <body>
     <nav>
