--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/style/css/nav.css" />
-    <link rel="stylesheet" href="/style/css/section.css" />
-    <link rel="stylesheet" href="/style/css/index.css">
-    <link rel="stylesheet" href="/style/css/footer.css">
+    <link rel="stylesheet" href="./style/css/nav.css" />
+    <link rel="stylesheet" href="./style/css/section.css" />
+    <link rel="stylesheet" href="./style/css/index.css">
+    <link rel="stylesheet" href="./style/css/footer.css">
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
