--- a/End.html
+++ b/End.html
@@ -51,7 +51,7 @@
         <br />
         감사합니다.
         <br />
-        <a href="/index.html">🏠Home</a>
+        <a href="/index.html" style="text-decoration: none">🏠Home</a>
       </div>
     </section>
 
