--- a/Signup.html
+++ b/Signup.html
@@ -41,9 +41,9 @@
         >
       </div>
     </nav>
-    <header class="header">회원가입</header>
 
     <section>
+      <div class="header">회원가입</div>
       <table class="table">
         <tr>
           <th>아이디</th>
@@ -100,14 +100,13 @@
           </td>
         </tr>
       </table>
-    </section>
-
-    <footer class="footer">
       <input type="checkbox" name="agree" value="agree" id="agree" />
       <label for="agree">정보제공에 동의합니다.</label>
 
       <br />
-      <button type="submit"><a href="/Login.html"> 확인</a></button>
-    </footer>
+      <button type="submit"><a href="./Login.html"> 확인</a></button>
+    </section>
+
+    <footer class="footer"></footer>
   </body>
 </html>
