--- a/html/Login.html
+++ b/html/Login.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./style/css/nav.css" />
-    <link rel="stylesheet" href="./style/css/section.css" />
-    <link rel="stylesheet" href="./style/css/Login.css">
-    <link rel="stylesheet" href="./style/css/footer.css">
+    <link rel="stylesheet" href="../style/css/nav.css" />
+    <link rel="stylesheet" href="../style/css/section.css" />
+    <link rel="stylesheet" href="../style/css/Login.css">
+    <link rel="stylesheet" href="../style/css/footer.css">
    
    
   </head>
@@ -17,7 +17,7 @@
     <nav>
       <div class="inline">
         <span class="logo"
-          ><a href="./index.html" target="_self" class="logo-button"
+          ><a href="../index.html" target="_self" class="logo-button"
             >KHCAFE</a
           ></span
         >
@@ -25,20 +25,20 @@
         <span
           ><ul class="inline list-style-none nav-pos ul_top_menu">
             <li>
-              <a href="./index.html" target="_self" class="nav-button">Home</a>
+              <a href="../index.html" target="_self" class="nav-button">Home</a>
             </li>
             <li>
-              <a href="./Login.html" target="_self" class="nav-button"
+              <a href="../Login.html" target="_self" class="nav-button"
                 >로그인</a
               >
             </li>
             <li>
-              <a href="./survey.html" target="_self" class="nav-button"
+              <a href="../survey.html" target="_self" class="nav-button"
                 >설문조사</a
               >
             </li>
             <li>
-              <a href="./static_answer.html" target="_self" class="nav-button"
+              <a href="../static_answer.html" target="_self" class="nav-button"
                 >통계</a
               >
             </li>
@@ -60,10 +60,10 @@
         <tr>
           <th>Password</th>
           <td><input type="password" name="user_pw" id="user_pw" /></td>
-          <td><button type="submit"> <a href="/survey.html"> Login</a></button></td>
+          <td><button type="submit"> <a href="../survey.html"> Login</a></button></td>
         </tr>
 
-          <td colspan="3" class="td"><a href="./Signup.html">회원가입</a></td>
+          <td colspan="3" class="td"><a href="../Signup.html">회원가입</a></td>
         </tr>
       </table>
     </section>
