--- a/html/Signup.html
+++ b/html/Signup.html
@@ -5,35 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Signup</title>
-    <link rel="stylesheet" href="/style/css/nav.css" />
-    <link rel="stylesheet" href="/style/css/section.css" />
-    <link rel="stylesheet" href="/style/css/Signup.css" />
+    <link rel="stylesheet" href="../style/css/nav.css" />
+    <link rel="stylesheet" href="../style/css/section.css" />
+    <link rel="stylesheet" href="../style/css/Signup.css" />
   </head>
   <body>
     <nav>
       <div class="inline">
         <span class="logo"
-          ><a href="./index.html" target="_self" class="logo-button"
+          ><a href="../index.html" target="_self" class="logo-button"
             >KHCAFE</a
           ></span
         >
         <span
           ><ul class="inline list-style-none nav-pos">
             <li>
-              <a href="./index.html" target="_self" class="nav-button">Home</a>
+              <a href="../index.html" target="_self" class="nav-button">Home</a>
             </li>
             <li>
-              <a href="./Login.html" target="_self" class="nav-button"
+              <a href="../Login.html" target="_self" class="nav-button"
                 >로그인</a
               >
             </li>
             <li>
-              <a href="./survey.html" target="_self" class="nav-button"
+              <a href="../survey.html" target="_self" class="nav-button"
                 >설문조사</a
               >
             </li>
             <li>
-              <a href="./static_answer.html" target="_self" class="nav-button"
+              <a href="../static_answer.html" target="_self" class="nav-button"
                 >통계</a
               >
             </li>
@@ -104,7 +104,7 @@
       <label for="agree">정보제공에 동의합니다.</label>
 
       <br />
-      <button type="submit"><a href="./Login.html"> 확인</a></button>
+      <button type="submit"><a href="../Login.html"> 확인</a></button>
     </section>
 
     <footer class="footer"></footer>
