--- a/html/menu.html
+++ b/html/menu.html
@@ -12,7 +12,7 @@
     <nav>
       <div class="inline">
         <span class="logo"
-          ><a href="./index.html" target="_self" class="logo-button">KHCAFE</a></span
+          ><a href="../index.html" target="_self" class="logo-button">KHCAFE</a></span
         >
         <span
           ><ul class="inline list-style-none nav-pos">
