--- a/html/static_answer.html
+++ b/html/static_answer.html
@@ -5,36 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./style/css/nav.css" />
-    <link rel="stylesheet" href="./style/css/section.css" />
-    <link rel="stylesheet" href="./style/css/statics.css" />
-    <link rel="stylesheet" href="./style/css/footer.css" />
+    <link rel="stylesheet" href="../style/css/nav.css" />
+    <link rel="stylesheet" href="../style/css/section.css" />
+    <link rel="stylesheet" href="../style/css/statics.css" />
+    <link rel="stylesheet" href="../style/css/footer.css" />
   </head>
   <body>
     <nav>
       <div class="inline">
         <span class="logo"
-          ><a href="./index.html" target="_self" class="logo-button"
+          ><a href="../index.html" target="_self" class="logo-button"
             >KHCAFE</a
           ></span
         >
         <span
           ><ul class="inline list-style-none nav-pos">
             <li>
-              <a href="./index.html" target="_self" class="nav-button">Home</a>
+              <a href="../index.html" target="_self" class="nav-button">Home</a>
             </li>
             <li>
-              <a href="./Login.html" target="_self" class="nav-button"
+              <a href="../Login.html" target="_self" class="nav-button"
                 >로그인</a
               >
             </li>
             <li>
-              <a href="./survey.html" target="_self" class="nav-button"
+              <a href="../survey.html" target="_self" class="nav-button"
                 >설문조사</a
               >
             </li>
             <li>
-              <a href="./static_answer.html" target="_self" class="nav-button"
+              <a href="../static_answer.html" target="_self" class="nav-button"
                 >통계</a
               >
             </li>
@@ -106,7 +106,7 @@
         </table>
       </div>
       <div class="center margin-top">
-        <a href="./static_user.html"><input type="button" value="다음" /></a>
+        <a href="../static_user.html"><input type="button" value="다음" /></a>
       </div>
     </section>
 
