--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./style/css/nav.css" />
-    <link rel="stylesheet" href="./style/css/section.css" />
-    <link rel="stylesheet" href="./style/css/index.css">
-    <link rel="stylesheet" href="./style/css/footer.css">
+    <link rel="stylesheet" href="../style/css/nav.css" />
+    <link rel="stylesheet" href="../style/css/section.css" />
+    <link rel="stylesheet" href="../style/css/index.css">
+    <link rel="stylesheet" href="../style/css/footer.css">
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,27 +19,27 @@
     <nav>
       <div class="inline">
         <span class="logo"
-          ><a href="./index.html" target="_self" class="logo-button"
+          ><a href="../index.html" target="_self" class="logo-button"
             >KHCAFE</a
           ></span
         >
         <span
           ><ul class="inline list-style-none nav-pos">
             <li>
-              <a href="./index.html" target="_self" class="nav-button">Home</a>
+              <a href="../index.html" target="_self" class="nav-button">Home</a>
             </li>
             <li>
-              <a href="./Login.html" target="_self" class="nav-button"
+              <a href="../Login.html" target="_self" class="nav-button"
                 >로그인</a
               >
             </li>
             <li>
-              <a href="./survey.html" target="_self" class="nav-button"
+              <a href="../survey.html" target="_self" class="nav-button"
                 >설문조사</a
               >
             </li>
             <li>
-              <a href="./static_answer.html" target="_self" class="nav-button"
+              <a href="../static_answer.html" target="_self" class="nav-button"
                 >통계</a
               >
             </li>
@@ -48,7 +48,7 @@
       </div>
     </nav>
     <section>
-<div><img src="./style/image/coffee.png" class="cut-img"></div>
+<div><img src="../style/image/coffee.png" class="cut-img"></div>
       <div class="maintext">KH카페에 방문해 주셔서 진심으로 감사합니다.</div>
       <div class="maintext">다시 한번 방문에 감사드립니다.</div>
       <div class="maintext">진짜 감사합니다.</div>
