--- a/html/Login.html
+++ b/html/Login.html
@@ -28,17 +28,17 @@
               <a href="../index.html" target="_self" class="nav-button">Home</a>
             </li>
             <li>
-              <a href="../Login.html" target="_self" class="nav-button"
+              <a href="./Login.html" target="_self" class="nav-button"
                 >로그인</a
               >
             </li>
             <li>
-              <a href="../survey.html" target="_self" class="nav-button"
+              <a href="./survey.html" target="_self" class="nav-button"
                 >설문조사</a
               >
             </li>
             <li>
-              <a href="../static_answer.html" target="_self" class="nav-button"
+              <a href="./static_answer.html" target="_self" class="nav-button"
                 >통계</a
               >
             </li>
@@ -60,10 +60,10 @@
         <tr>
           <th>Password</th>
           <td><input type="password" name="user_pw" id="user_pw" /></td>
-          <td><button type="submit"> <a href="../survey.html"> Login</a></button></td>
+          <td><button type="submit"> <a href="./survey.html"> Login</a></button></td>
         </tr>
 
-          <td colspan="3" class="td"><a href="../Signup.html">회원가입</a></td>
+          <td colspan="3" class="td"><a href="./Signup.html">회원가입</a></td>
         </tr>
       </table>
     </section>
