--- a/html/static_user.html
+++ b/html/static_user.html
@@ -24,17 +24,17 @@
               <a href="../index.html" target="_self" class="nav-button">Home</a>
             </li>
             <li>
-              <a href="../Login.html" target="_self" class="nav-button"
+              <a href="./Login.html" target="_self" class="nav-button"
                 >로그인</a
               >
             </li>
             <li>
-              <a href="../survey.html" target="_self" class="nav-button"
+              <a href="./survey.html" target="_self" class="nav-button"
                 >설문조사</a
               >
             </li>
             <li>
-              <a href="../static_answer.html" target="_self" class="nav-button"
+              <a href="./static_answer.html" target="_self" class="nav-button"
                 >통계</a
               >
             </li>
@@ -83,7 +83,7 @@
         </table>
       </div>
       <div class="center margin-top">
-        <a href="../End.html"><input type="button" value="확인" /></a>
+        <a href="./End.html"><input type="button" value="확인" /></a>
       </div>
     </section>
 
