--- a/html/survey.html
+++ b/html/survey.html
@@ -24,17 +24,17 @@
               <a href="../index.html" target="_self" class="nav-button">Home</a>
             </li>
             <li>
-              <a href="../Login.html" target="_self" class="nav-button"
+              <a href="./Login.html" target="_self" class="nav-button"
                 >로그인</a
               >
             </li>
             <li>
-              <a href="../survey.html" target="_self" class="nav-button"
+              <a href="./survey.html" target="_self" class="nav-button"
                 >설문조사</a
               >
             </li>
             <li>
-              <a href="../static_answer.html" target="_self" class="nav-button"
+              <a href="./static_answer.html" target="_self" class="nav-button"
                 >통계</a
               >
             </li>
@@ -44,7 +44,7 @@
     </nav>
     <section>
       <div>
-        <form action="../End.html" method="get">
+        <form action="./End.html" method="get">
           <table>
             <tr>
               <th>항목번호</th>
