--- a/html/End.html
+++ b/html/End.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../style/css/nav.css" />
     <link rel="stylesheet" href="../style/css/section.css" />
     <link rel="stylesheet" href="../style/css/footer.css" />
+    <link rel="stylesheet" href="../style/css/dropdown.css" />
   </head>
   <body>
     <nav>
@@ -17,8 +18,12 @@
             >KHCAFE</a
           ></span
         >
+
         <span
-          ><ul class="inline list-style-none nav-pos">
+          ><ul
+            class="inline list-style-none nav-pos ul_top_menu"
+            id="main-menu"
+          >
             <li>
               <a href="../index.html" target="_self" class="nav-button">Home</a>
             </li>
@@ -26,16 +31,23 @@
               <a href="./Login.html" target="_self" class="nav-button"
                 >로그인</a
               >
+              <ul id="sub-menu">
+                <li><a href="./Login.html">로그인</a></li>
+                <li><a href="./Signup.html">회원가입</a></li>
+              </ul>
             </li>
             <li>
-              <a href="./survey.html" target="_self" class="nav-button"
-                >설문조사</a
-              >
+              <a href="#" target="_self" class="nav-button">설문조사</a>
+              <ul id="sub-menu">
+                <li><a href="./survey.html">설문조사</a></li>
+              </ul>
             </li>
             <li>
-              <a href="./static_answer.html" target="_self" class="nav-button"
-                >통계</a
-              >
+              <a href="#" target="_self" class="nav-button">통계</a>
+              <ul id="sub-menu">
+                <li><a href="./static_answer.html">문항별 통계</a></li>
+                <li><a href="./static_user.html">사용자별 통계</a></li>
+              </ul>
             </li>
           </ul></span
         >
