--- a/html/menu.html
+++ b/html/menu.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style/css/nav.css" />
     <link rel="stylesheet" href="./style/css/section.css" />
+    <link rel="stylesheet" href="../style/css/dropdown.css">
   </head>
   <body>
     <nav>
