--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./style/css/section.css" />
     <link rel="stylesheet" href="./style/css/index.css">
     <link rel="stylesheet" href="./style/css/footer.css">
+    <link rel="stylesheet" href="../style/css/dropdown.css">
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
