--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav>
       <div class="inline">
         <span class="logo"
-          ><a href="../index.html" target="_self" class="logo-button"
+          ><a href="./index.html" target="_self" class="logo-button"
             >KHCAFE</a
           ></span
         >
@@ -31,7 +31,7 @@
             id="main-menu"
           >
             <li>
-              <a href="../index.html" target="_self" class="nav-button">Home</a>
+              <a href="./index.html" target="_self" class="nav-button">Home</a>
             </li>
             <li>
               <a href="./Login.html" target="_self" class="nav-button"
