--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <a href="./index.html" target="_self" class="nav-button">Home</a>
             </li>
             <li>
-              <a href="./Login.html" target="_self" class="nav-button"
+              <a href="./html/Login.html" target="_self" class="nav-button"
                 >로그인</a
               >
               <ul id="sub-menu">
