--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
     </nav>
     <section>
-<div><img src="../style/image/coffee.png" class="cut-img"></div>
+<div><img src="./style/image/coffee.png" class="cut-img"></div>
       <div class="maintext">KH카페에 방문해 주셔서 진심으로 감사합니다.</div>
       <div class="maintext">다시 한번 방문에 감사드립니다.</div>
       <div class="maintext">진짜 감사합니다.</div>
