--- a/html/End.html
+++ b/html/End.html
@@ -58,8 +58,9 @@
       <div class="div">
         소중한 시간을 내어 설문에 참여해 주셔서 감사합니다.
         <br />
-        앞으로도 고객님께서 더욱 만족하실 수 있도록 노력하는 KH Cafe가
-        되겠습니다.
+        앞으로도 고객님께서 더욱 만족하실 수 있도록 노력하는
+        <br />
+        KH Cafe가 되겠습니다.
         <br />
         감사합니다.
         <br />
