--- a/html/Login.html
+++ b/html/Login.html
@@ -71,7 +71,7 @@
         <tr>
           <th>Password</th>
           <td><input type="password" name="user_pw" id="user_pw" /></td>
-          <td><button type="submit"> <a href="./survey.html"> Login</a></button></td>
+          <td><a href="./static_user.html"><input type="button" value="Login" /></a></td>
         </tr>
 
           <td colspan="3" class="td"><a href="./Signup.html">회원가입</a></td>
