--- a/html/Login.html
+++ b/html/Login.html
@@ -61,7 +61,7 @@
     
 
     <section>
-      <div>로그인</div>
+      <div class="header">로그인</div>
       <table class="table" >
         <tr>
           <th>ID</th>
