--- a/html/Signup.html
+++ b/html/Signup.html
@@ -112,11 +112,21 @@
           </td>
         </tr>
       </table>
-      <input type="checkbox" name="agree" value="agree" id="agree" />
-      <label for="agree">정보제공에 동의합니다.</label>
+      <table class="go-center">
+        <tr>
+          <th>
+            <input type="checkbox" name="agree" value="agree" id="agree" />
+            <label for="agree">정보제공에 동의합니다.</label>
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <button type="submit"><a href="./Login.html"> 가입</a></button>
+          </th>
+        </tr>
+      </table>
 
       <br />
-      <button type="submit"><a href="./Login.html"> 확인</a></button>
     </section>
 
     <footer class="footer"></footer>
