--- a/html/static_answer.html
+++ b/html/static_answer.html
@@ -56,7 +56,7 @@
     </nav>
     <section>
       <div>
-        <table>
+        <table class="go-center">
           <tr>
             <th>항목번호</th>
             <th colspan="5">문항</th>
