--- a/html/survey.html
+++ b/html/survey.html
@@ -57,7 +57,7 @@
     <section>
       <div>
         <form action="./End.html" method="get">
-          <table>
+          <table class="go-center">
             <tr>
               <th>항목번호</th>
               <th colspan="5">문항</th>
