--- a/html/End.html
+++ b/html/End.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../style/css/section.css" />
     <link rel="stylesheet" href="../style/css/footer.css" />
     <link rel="stylesheet" href="../style/css/dropdown.css" />
+    <link rel="stylesheet" href="../style/css/end.css" />
   </head>
   <body>
     <nav>
@@ -55,15 +56,15 @@
     </nav>
 
     <section>
-      <div class="div">
+      <div class="center">
         소중한 시간을 내어 설문에 참여해 주셔서 감사합니다.
-        <br />
-        앞으로도 고객님께서 더욱 만족하실 수 있도록 노력하는
-        <br />
-        KH Cafe가 되겠습니다.
-        <br />
-        감사합니다.
-        <br />
+      </div>
+      <div class="center">
+        앞으로도 고객님께서 더욱 만족하실 수 있도록 노력하는 KH Cafe가
+        되겠습니다.
+      </div>
+      <div class="center">감사합니다.</div>
+      <div class="center">
         <a href="../index.html" style="text-decoration: none">🏠Home</a>
       </div>
     </section>
