--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style/css/nav.css" />
     <link rel="stylesheet" href="./style/css/section.css" />
-    <link rel="stylesheet" href="./style/css/index.css">
-    <link rel="stylesheet" href="./style/css/footer.css">
-    <link rel="stylesheet" href="./style/css/dropdown.css">
+    <link rel="stylesheet" href="./style/css/index.css" />
+    <link rel="stylesheet" href="./style/css/footer.css" />
+    <link rel="stylesheet" href="./style/css/dropdown.css" />
 
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <nav>
@@ -60,13 +62,16 @@
       </div>
     </nav>
     <section>
-<div><img src="./style/image/coffee.png" class="cut-img"></div>
+      <div class="maintext">
+        <img src="./style/image/coffee.png" class="cut-img" />
+      </div>
       <div class="maintext">KH카페에 방문해 주셔서 진심으로 감사합니다.</div>
       <div class="maintext">다시 한번 방문에 감사드립니다.</div>
       <div class="maintext">진짜 감사합니다.</div>
-  </table>
     </section>
 
-    <footer class="footer">KH Cafe | Address: 서울시 강남구 테헤란로 130호 1F | Call☎: (02)123-4567 </footer>
+    <footer class="footer">
+      KH Cafe | Address: 서울시 강남구 테헤란로 130호 1F | Call☎: (02)123-4567
+    </footer>
   </body>
 </html>
