--- a/html/End.html
+++ b/html/End.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../style/css/section.css" />
     <link rel="stylesheet" href="../style/css/footer.css" />
     <link rel="stylesheet" href="../style/css/dropdown.css" />
-    <link rel="stylesheet" href="../style/css/end.css" />
+    <link rel="stylesheet" href="../style/css/End.css" />
   </head>
   <body>
     <nav>
