--- a/bootstrap/nav_footer.html
+++ b/bootstrap/nav_footer.html
@@ -65,8 +65,13 @@
     <main>
 
     </main>
-    <footer>
-        <!-- place footer here -->
+    <footer class=" pt-2  border-top fixed-bottom ">
+        <div class="container">
+            <p class="form-text text-center text-muted">
+                KH CAFE | Address : 서울시 강남구 테헤란로 130호 1F | Call☎: (02)123-4567
+            </p>
+        </div>
+
     </footer>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
