--- a/bootstrap/End.html
+++ b/bootstrap/End.html
@@ -13,6 +13,21 @@
 </head>
 <body>
     
+  
+<main>
+    <div class="center">
+      소중한 시간을 내어 설문에 참여해 주셔서 감사합니다.
+    </div>
+    <div class="center">
+      앞으로도 고객님께서 더욱 만족하실 수 있도록 노력하는 
+    </div>
+    <div class="center">KH Cafe가 되겠습니다.</div>
+    <div class="center">감사합니다.</div>
+    <div class="center">
+      <a href="./index.html" style="text-decoration: none">Home</a>
+    </div>
+</main>
+
 
 
     <script
