--- a/bootstrap/login.html
+++ b/bootstrap/login.html
@@ -12,7 +12,30 @@
       crossorigin="anonymous"/>
 </head>
 <body>
-    
+  <div class="container">
+      <div class="row align-items-center g-3 p-5">
+          <div class="col-lg-7 text-center text-lg-start">
+            <div class="display-6 fw-bold align-items-center">로그인</div>
+          </div>
+          <div class="col-md-10 mx-auto col-lg-5 border bg-light bg-opacity-75 p-5">
+              <form action="./index.html">
+                  <div class="mb-3">
+                      <input type="email" class="form-control" id="id" placeholder="ID" name="email">
+                      <label for="id"></label>
+                      <input type="password" class="form-control" id="password" placeholder="Password"
+                          name="password">
+                      <label for="password"></label>
+                      <input class="w-100 btn btn-lg btn-primary" type="submit" value="로그인" name="Signup">
+                      <hr>
+                      <div class="text-center text-opacity-75">
+                        <a href="./signup.html">회원가입</a>
+                    </div>
+                     
+              </form>
+          </div>
+      </div>
+  </div>
+
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
