--- a/bootstrap/login.html
+++ b/bootstrap/login.html
@@ -12,12 +12,13 @@
       crossorigin="anonymous"/>
 </head>
 <body>
+  <main>
   <div class="container">
       <div class="row align-items-center g-3 p-5">
-          <div class="col-lg-7 text-center text-lg-start">
-            <div class="display-6 fw-bold align-items-center">로그인</div>
-          </div>
-          <div class="col-md-10 mx-auto col-lg-5 border bg-light bg-opacity-75 p-5">
+          
+      </div>
+      <div class="col-md-10 mx-auto col-lg-5 border bg-light bg-opacity-75 p-5">
+            <div class="display-6 fw-bold text-center mb-3">로그인</div>
               <form action="./index.html">
                   <div class="mb-3">
                       <input type="email" class="form-control" id="id" placeholder="ID" name="email">
@@ -35,7 +36,7 @@
           </div>
       </div>
   </div>
-
+</main>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
