--- a/bootstrap/nav_footer.html
+++ b/bootstrap/nav_footer.html
@@ -21,7 +21,7 @@
                     <a href="" class="navbar-brand"><img src="../style/image/coffee.png" width="40" alt="" />
                         KHCAFE</a>
                     <nav class="nav justify-content-center">
-                        <a class="nav-link text-dark fs-6" href="#">메인</a>
+                        <a class="nav-link text-dark fs-6" href="./index.html">메인</a>
                         <!-- 로그인 드롭다운 -->
                         <div class="btn-group">
                             <button class="btn dropdown-toggle" type="button" id="triggerId" data-bs-toggle="dropdown"
@@ -29,8 +29,8 @@
                                 로그인
                             </button>
                             <div class="dropdown-menu dropdown-menu-start" aria-labelledby="triggerId">
-                                <a class="dropdown-item" href="#">로그인</a>
-                                <a class="dropdown-item" href="#">회원가입</a>
+                                <a class="dropdown-item" href="./login.html">로그인</a>
+                                <a class="dropdown-item" href="./signup.html">회원가입</a>
                             </div>
                         </div>
                         <!-- 로그인 드롭다운 -->
@@ -41,7 +41,7 @@
                                 설문조사
                             </button>
                             <div class="dropdown-menu dropdown-menu-start" aria-labelledby="triggerId">
-                                <a class="dropdown-item" href="#">설문조사</a>
+                                <a class="dropdown-item" href="./survey.html">설문조사</a>
                             </div>
                         </div>
                         <!-- 설문조사 드롭다운 -->
@@ -52,8 +52,8 @@
                                 통계
                             </button>
                             <div class="dropdown-menu dropdown-menu-start" aria-labelledby="triggerId">
-                                <a class="dropdown-item" href="#">문항별 통계</a>
-                                <a class="dropdown-item" href="#">사용자별 통계</a>
+                                <a class="dropdown-item" href="./static_answer.html">문항별 통계</a>
+                                <a class="dropdown-item" href="./static_user.html">사용자별 통계</a>
                             </div>
                         </div>
                         <!-- 통계 드롭다운 -->
