--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -10,7 +10,11 @@
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-
+    <style>
+        * {
+            border: 0.5px solid black;
+        }
+    </style>
 </head>
 
 <body>
@@ -18,7 +22,9 @@
         <!-- place navbar here -->
     </header>
     <main>
-
+        <div class="container-fluid justify-content-center">
+            sdsd
+        </div>
     </main>
     <footer>
         <!-- place footer here -->
@@ -34,3 +40,40 @@
 </body>
 
 </html>
+
+<!-- <div class="card center-block text-center">
+    <img src="../style/image/coffee.png" class="w-75 img-fluid rounded-top" alt="">
+    <div class="card-body">
+        <h4 class="card-title">KH카페에 방문해주셔서 감사합니다.</h4>
+        <div class="row"> -->
+<!-- 커피 -->
+<!-- <div class="dropdown open col">
+                <a class="btn border-secondary dropdown-toggle" type="button" id="triggerId"
+                    data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Coffe
+                </a>
+                <div class="dropdown-menu" aria-labelledby="triggerId">
+                    <a class="dropdown-item" href="#">에스프레소</a>
+                    <a class="dropdown-item" href="#">아메리카노</a>
+                    <a class="dropdown-item" href="#">카페라떼</a>
+                    <a class="dropdown-item" href="#">카페모카</a>
+                    <a class="dropdown-item disabled" href="#">카푸치노(품절)</a>
+                </div>
+            </div> -->
+<!-- 음료 -->
+<!-- <div class="dropdown open col">
+                <a class="btn border-secondary dropdown-toggle" type="button" id="triggerId"
+                    data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Non Coffe
+                </a>
+                <div class="dropdown-menu" aria-labelledby="triggerId">
+                    <a class="dropdown-item" href="#">녹차라떼</a>
+                    <a class="dropdown-item" href="#">홍차라떼</a>
+                    <a class="dropdown-item" href="#">레몬에이드</a>
+                    <a class="dropdown-item" href="#">아이스티</a>
+                    <a class="dropdown-item" href="#">초코라떼</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div> -->
