--- a/bootstrap/nav_footer.html
+++ b/bootstrap/nav_footer.html
@@ -18,7 +18,8 @@
         <div class="d-flex justify-content-between">
             <div class="container border-bottom">
                 <nav class="navbar ">
-                    <a href="" class="navbar-brand"><img src="../style/image/coffee.png" width="40" alt="" />
+                    <a href="./index.html" class="navbar-brand"><img src="../style/image/coffee.png" width="40"
+                            alt="" />
                         KHCAFE</a>
                     <nav class="nav justify-content-center">
                         <a class="nav-link text-dark fs-6" href="./index.html">메인</a>
