--- a/bootstrap/static_answer.html
+++ b/bootstrap/static_answer.html
@@ -63,10 +63,12 @@
     <div class="container">
       <div class="row align-items-center g-3 p-5 ">
         <div class="form-control bg-light">
-          <table class="table ">
+          <table class="table table-striped ">
             <tr class="text-center">
+              <thead>
               <th>항목번호</th>
               <th colspan="4">문항</th>
+            </thead>
             </tr>
             <tr>
               <th rowspan="3" class="row">
@@ -129,7 +131,12 @@
               <td>25</td>
             </tr>
           </table>
+          <hr>
+          <div class="text-center">
+            <a href="./static_user.html" class="w-30 btn btn-md-center btn-secondary">다음</a>
+              </div>
         </div>
+        
       </div>
     </div>
   </main>
