--- a/bootstrap/survey.html
+++ b/bootstrap/survey.html
@@ -89,7 +89,7 @@
       </table>
       <hr>
       <div class="text-center">
-    <a href="./login.html" class="w-30 btn btn-md-center btn-primary">제출하기</a>
+    <a href="./end.html" class="w-30 btn btn-md-center btn-primary">제출하기</a>
       </div>
     </div>
   </main>
