--- a/bootstrap/login.html
+++ b/bootstrap/login.html
@@ -72,7 +72,7 @@
             <label for="id"></label>
             <input type="password" class="form-control" id="password" placeholder="Password" name="password">
             <label for="password"></label>
-            <input class="w-100 btn btn-lg btn-primary" type="submit" value="로그인" name="Signup">
+            <input class="w-100 btn btn-lg btn-secondary" type="submit" value="로그인" name="Signup">
             <hr>
             <div class="text-center text-opacity-75">
               <a href="./signup.html">회원가입</a>
