--- a/bootstrap/survey.html
+++ b/bootstrap/survey.html
@@ -61,7 +61,7 @@
   </header>
   <main>
     <div class="container">
-      <div class="row align-items-center g-3 p-5">
+      <div class="row align-items-center g-3 p-4">
 
 
 
@@ -132,18 +132,10 @@
               <td><input type="radio" name="Q1" id="" /> 매우 그렇다.</td>
             </tr>
           </tbody>
-<<<<<<< HEAD
       </table>
-      <hr>
+      <hr class="">
       <div class="text-center">
-    <a href="./end.html" class="w-30 btn btn-md-center btn-primary">제출하기</a>
-=======
-        </table>
-        <hr>
-        <div class="text-center">
-          <a href="./login.html" class="w-30 btn btn-md-center btn-primary">제출하기</a>
-        </div>
->>>>>>> a5020530d6f7ab599de9fe6e2172462c346cf9d8
+    <a href="./end.html" class="w-30 btn btn-md-center btn-secondary">제출하기</a>
       </div>
   </main>
   <footer class=" pt-2  border-top fixed-bottom ">
