--- a/bootstrap/signup.html
+++ b/bootstrap/signup.html
@@ -59,7 +59,6 @@
         </nav>
       </div>
   </header>
-<<<<<<< HEAD
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -76,17 +75,17 @@
               <div class="display-6 fw-bold  text-center mb-3">회원가입</div>
                 <form action="./index.html">
                     <div class="mb-1">
-                      <div>ID</div>
-                        <input type="text" class="form-control" id="id" placeholder="ID" name="email">
+                      <div>아이디</div>
+                        <input type="text" class="form-control" id="id" placeholder="아이디" name="email">
                         <label for="id"></label>
-                        <div>Password</div>
-                        <input type="password" class="form-control" id="password" placeholder="Password"
+                        <div>비밀번호</div>
+                        <input type="password" class="form-control" id="password" placeholder="비밀번호"
                             name="password">
                         <label for="password"></label>
                         <div>비밀번호 확인</div>
-                        <input type="password" class="form-control" id="password" placeholder="Password"
+                        <input type="password" class="form-control" id="passwordcheck" placeholder="비밀번호 확인"
                             name="password">
-                        <label for="password"></label>
+                        <label for="passwordcheck"></label>
                         <div>이름</div>
                         <input type="text"  class="form-control" name="name" id="name" placeholder="이름을 입력하세요.">
                         <label for="name"></label>
@@ -100,7 +99,7 @@
                             <input type="text"  class="form-control" name="address" id="address" placeholder="지번">
                         <label for="address"></label>
                           </div>
-                          <div class="col-3"><input type="submit" class="w-180 btn btn-primary" value="지번 검색">
+                          <div class="col-3"><input type="submit" class="w-180 btn btn-secondary" value="지번 검색">
                       </div>
                         <input type="text"  class="form-control mb-3" name="address" id="detailaddress" placeholder="상세주소를 입력하세요.">
                         <label for="detailaddress"></label>
@@ -114,7 +113,7 @@
                             </div>
                             
                           </div>
-                          <a href="./login.html" class="w-100 btn btn-lg btn-primary">회원가입</a>
+                          <a href="./login.html" class="w-100 btn btn-lg btn-secondary">회원가입</a>
                         </div>
                       </div>
                        
@@ -123,89 +122,11 @@
         </div>
     </div>
   </main>
-=======
-  <main>
-    <div class="container">
-      <div class="row align-items-center g-3 p-4">
-        <!-- <div class="col-lg-7 text-center text-lg-start"> -->
 
-
-      </div>
-      <div class="col-md-10 mx-auto col-lg-5 border bg-light bg-opacity-75 p-5">
-        <div class="display-6 fw-bold  text-center mb-2">회원가입</div>
-        <form action="./index.html">
-          <div class="mb-2">
-            <div>ID</div>
-            <input type="text" class="form-control" id="id" placeholder="ID" name="email">
-            <label for="id"></label>
-            <div>Password</div>
-            <input type="password" class="form-control" id="password" placeholder="Password" name="password">
-            <label for="password"></label>
-            <div>비밀번호 확인</div>
-            <input type="password" class="form-control" id="password" placeholder="Password" name="password">
-            <label for="password"></label>
-            <div>이름</div>
-            <input type="text" class="form-control" name="name" id="name" placeholder="이름을 입력하세요.">
-            <label for="name"></label>
-            <div>생년월일</div>
-            <input type="date" class="form-control" name="date" id="date">
-            <label for="date"></label>
-            <div>주소</div>
-            <li class="list-group-item">
-              <div class="row">
-                <div class="col-9">
-                  <input type="text" class="form-control" name="address" id="address" placeholder="지번">
-                  <label for="address"></label>
-                </div>
-                <div class="col-3"><input type="submit" class="w-180 btn btn-primary" value="지번 검색">
-                </div>
-                <input type="text" class="form-control mb-3" name="address" id="detailaddress"
-                  placeholder="상세주소를 입력하세요.">
-                <label for="detailaddress"></label>
-                <div class="text-center text-opacity-75">
-                  <hr>
-                  <div class="text-dark text-opacity-75">
-                    <div class="form-check mb-2">
-                      <input type="checkbox" class="form-check-input" name="" id="default-check" />
-                      <label for="default-check" class="form-check-label">정보제공에 동의합니다.</label>
-                    </div>
-                    <input class="w-100 btn btn-lg btn-primary" type="submit" value="회원가입" name="Signup">
-                  </div>
-                </div>
-
-        </form>
-      </div>
-    </div>
-    </div>
-  </main>
-  <footer class=" pt-2  border-top fixed-bottom ">
-    <div class="container">
-      <p class="form-text text-center text-muted">
-        KH CAFE | Address : 서울시 강남구 테헤란로 130호 1F | Call☎: (02)123-4567
-      </p>
-    </div>
-
-  </footer>
-
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
-  </head>
-
-  <body>
-
->>>>>>> a5020530d6f7ab599de9fe6e2172462c346cf9d8
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
       </script>
   </body>
-<<<<<<< HEAD
-=======
 
->>>>>>> a5020530d6f7ab599de9fe6e2172462c346cf9d8
 </html>
