--- a/bootstrap/static_answer.html
+++ b/bootstrap/static_answer.html
@@ -63,7 +63,7 @@
     <div class="container">
       <div class="row align-items-center g-3 p-5 ">
         <div class="form-control bg-light">
-          <table class="table table-striped ">
+          <table class="table table-striped text-center ">
             <tr class="text-center">
               <thead>
               <th>항목번호</th>
