--- a/bootstrap/static_user.html
+++ b/bootstrap/static_user.html
@@ -64,10 +64,11 @@
     <div class="container">
       <div class="row align-items-center g-3 p-5">
         <div class="form-control bg-light">
-          <table class="table text-center">
+          <table class="table text-center table-striped">
+            <thead>
             <tr>
-              <th rowspan="2">항목번호</th>
-              <th colspan="5">문항</th>
+              <th rowspan="2"></th>
+              <th colspan="5">사용자별 통계</th>
             </tr>
             <tr>
               <th>(1) 전혀 아니다.</th>
@@ -76,6 +77,7 @@
               <th>(4) 그렇다.</th>
               <th>(5) 매우 그렇다.</th>
             </tr>
+          </thead>
             <tr>
               <td>박병주</td>
               <td>15</td>
@@ -101,6 +103,10 @@
               <td>1</td>
             </tr>
           </table>
+          <hr>
+          <div class="text-center">
+            <a href="./end.html" class="w-30 btn btn-md-center btn-secondary">확인</a>
+              </div>
         </div>
       </div>
     </div>
