--- a/bootstrap/static_user.html
+++ b/bootstrap/static_user.html
@@ -68,7 +68,7 @@
             <thead>
             <tr>
               <th rowspan="2"></th>
-              <th colspan="5">사용자별 통계</th>
+              <th class="fs-5" colspan="5">사용자별 통계</th>
             </tr>
             <tr>
               <th>(1) 전혀 아니다.</th>
