--- a/bootstrap/survey.html
+++ b/bootstrap/survey.html
@@ -61,16 +61,17 @@
   </header>
   <main>
     <div class="container">
-      <div class="row align-items-center g-3 p-4">
-
-
-
-      </div>
-      <div class="fs-3 text-center">설문조사</div>
-      <div class="border bg-light bg-opacity-75 p-5">
-        <table class="table table-striped text-center">
+      <div class="row align-items-center g-3 p-5">
+        <div class="form-control bg-light">
+          <table class="table text-center table-striped">
           <thead>
-            <tr class="fs-5">
+            <tr>
+              <tr>
+                <th class="fs-4" colspan="7">설문조사</th>
+                
+              </tr>
+            </tr>
+            <tr class="">
               <th scope=>항목번호</th>
               <th colspan="5">문항</th>
             </tr>
