--- a/bootstrap/survey.html
+++ b/bootstrap/survey.html
@@ -136,7 +136,7 @@
       </table>
       <hr class="">
       <div class="text-center">
-    <a href="./end.html" class="w-30 btn btn-md-center btn-secondary">제출하기</a>
+    <a href="./end1.html" class="w-30 btn btn-md-center btn-secondary">제출하기</a>
       </div>
   </main>
   <footer class=" pt-2  border-top fixed-bottom ">
