--- a/bootstrap/static_user.html
+++ b/bootstrap/static_user.html
@@ -105,7 +105,7 @@
           </table>
           <hr>
           <div class="text-center">
-            <a href="./end.html" class="w-30 btn btn-md-center btn-secondary">확인</a>
+            <a href="./end1.html" class="w-30 btn btn-md-center btn-secondary">확인</a>
             
               </div>
         </div>
